--- a/tokenize_frontend/package.json
+++ b/tokenize_frontend/package.json
@@ -14,6 +14,7 @@
     "@rainbow-me/rainbowkit": "^2.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.27.0",
     "viem": "^2.21.4",
     "wagmi": "^2.12.10"
@@ -29,6 +30,3 @@
     "vite": "^5.4.8"
   }
 }
-
-
-
